--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-native": "^0.45.1",
     "react-native-background-geolocation": "^2.8.3",
     "react-native-maps": "^0.15.3",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "xcode": "^0.9.3"
   }
 }
